# srain

./: .astylerc  .buildinfo  .gitignore  .travis.yml  .ycm_extra_conf.py  1.txt  2.txt  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CNAME  LICENSE  Makefile  Makefile.in  README  README.md  README.rst  blog.html  builtin.cfg  changelog.html  commands.html  config.html  configure  develop.html  faq.html  genindex.html  im.srain.Srain.json  index.html  install.html  intro.html  meson.build  meson_options.txt  misc.html  objects.inv  prefs.html  search.html  searchindex.js  sitemap.xml  srainrc.example  start.html  (+3 more)
data/: CMakeLists.txt  Makefile  Srain.appdata.xml  Srain.desktop  builtin.cfg  builtin.ini  im.srain.Srain.appdata.xml  im.srain.Srain.desktop  im.srain.Srain.gschema.xml  meson.build  srain.appdata.xml  srain.desktop  srain.gresource.xml  srain.metainfo.xml
data/icons/: meson.build
data/metainfo/: meson.build  srain.metainfo.xml.in.in
data/plugins/: avatar.py  upload.py
data/theme/: app.css  reset.css  silver_rain.css  summer_rain.css
data/themes/: app-min.css  app.css  bubble.css  default-bubble-dark.css  default-bubble.css  default-min.css  default.css  silver-rain.css
data/ui/: Makefile  about_box.glade  app.glade  buffer.glade  buffer_menu.glade  chan.glade  chan_box.glade  chan_panel.glade  chat.glade  chat_panel.glade  connect_dialog.glade  connect_panel.glade  connect_popover.glade  connect_window.glade  detail_dialog.glade  flow-controller.ui  image.glade  image_window.glade  join_dialog.glade  join_panel.glade  join_popover.glade  join_window.glade  message_list.glade  misc_message.glade  msg_bubble.glade  msg_list.glade  nick_menu.glade  prefs_dialog.glade  recv_message.glade  recv_msg.glade  reset.css  send_message.glade  send_msg.glade  session_panel.glade  side_bar_item.glade  srain.gresource.xml  stack_sidebar_item.glade  sys_msg.glade  url_previewer.glade  user_list.glade  (+2 more)
doc/reference/: meson.build  srain.toml.in
mod/gi-sample/: gi-sample.c  gi-sample.h  meson.build
mod/sirc/: meson.build  sirc-messenger.c  sirc-messenger.h  sirc-module.c
modules/sirc/: login.ui  meson.build  sirc-login-flow.c  sirc-login-flow.h  sirc-messenger.c  sirc-module.c  sirc.gresource.xml
modules/spy/: main.py  meson.build  spy-module.c  spy.gresource.xml
sif/: meson.build  sif-flow.c  sif-messenger.c
sif/sif/: sif-flow.h  sif-messenger.h
src/: Makefile  async.c  chat_log.c  cmd_list.sh  command.c  command_test.c  config.c  download.c  file_helper.c  filter.c  get_path.c  i18n.c  idles.c  log.c  main.c  markup.c  meson.build  plugin.c  rc.c  ret.c  srain.c  srn-app.c  srn-app.h  srn-extension-manager.c  srn-extension-manager.h  srn-extension.c  srn-extension.h  srn-flow-controller.c  srn-flow-controller.h  srn-flow.c  srn-flow.h  srn-loader.c  srn-loader.h  srn-messenger.c  srn-messenger.h  srn-module-manager.c  srn-module-manager.h  srn-window.c  srn.h  str_list.c  (+2 more)
src/config/: manager.c  password.c  password.h  password2.h  reader.c
src/core/: app.c  app_command.c  app_config.c  app_event.h  app_irc_event.c  app_ui_event.c  app_url.c  chat.c  chat_command.c  chat_command.h  chat_config.c  chat_prefs.c  chat_user.c  login_config.c  main.zig  message.c  rc.c  server.c  server_cap.c  server_cmd.c  server_config.c  server_irc_event.c  server_irc_event.h  server_prefs.c  server_state.c  server_ui_event.c  server_ui_event.h  server_url.c  server_user.c  srain.c  srain.h  user.c  user_config.c
src/decorator/: bot2human.c  decorator.c  filter.c_  mention.c  mirc.h  mirc_colorize.c  mirc_strip.c  pango_markup.c  relay.c
src/filter/: chat_log.c  command_filter.c_  filter.c  filter.h  filter2.h  log_filter.c  nick.c  pattern_filter.c  regex.c  regex_filter.c  user_filter.c
src/inc/: async.h  chat_log.h  cmd_list.h  command.h  config.h  decorator.h  download.h  extra_data.h  file_helper.h  filter.h  get_path.h  i18n.h  idles.h  interfaces.h  irc.h  irc_cmd.h  irc_core.h  irc_event.h  irc_magic.h  irc_parse.h  irc_test.h  libircclient_ex.h  log.h  markup.h  markup_renderer.h  meta.h  msg.h  nick_menu.h  norfc1459_numeric.h  path.h  pattern.h  pattern_set.h  plugin.h  prefs.h  rc.h  ret.h  server.h  server_cap.h  server_cmd.h  server_intf.h  (+42 more)
src/irc/: irc.c  irc_cmd.c  irc_core.c  irc_event.c  irc_parse.c  irc_shell.c  irc_test.c  sirc.c  sirc_cmd.c  sirc_event.c  sirc_parse.c  socket.c
src/lib/: command.c  command_test.c  download.c  extra_data.c  file_helper.c  i18n.c  log.c  markup_renderer.c  path.c  pattern.c  pattern_set.c  ret.c  utils.c  version.c
src/plguin/: plugin.c
src/prefs/: prefs.c  prefs.h
src/render/: mention_renderer.c  mirc.h  mirc_colorize_renderer.c  mirc_strip_renderer.c  pattern_render.c  relay_renderer.c  render.c  renderer.h  url_renderer.c
src/server/: chat.c  irc_event.c  irc_event.h  message.c  server.c  server_cmd.c  server_info.c  server_intf.c  server_irc_event.c  server_irc_event.h  server_list.c  server_msg_dispatch.c  server_prefs.c  server_ui_event.c  server_ui_event.h  server_url.c  srv.c  srv_event.c  srv_session_cmd.c  srv_test.c  ui_event.c  ui_event.h  user.c
src/sif/: sif-messenger.c
src/sirc/: io_stream.c  io_stream.h  sirc.c  sirc_cap.c  sirc_cmd.c  sirc_cmd_builder.c  sirc_cmd_builder.h  sirc_config.c  sirc_context.c  sirc_event_hdr.c  sirc_event_hdr.h  sirc_parse.c  sirc_parse.h  sirc_prefs.c  sirc_utils.c
src/sirc-real/: README.rst  sirc_cmd.c  sirc_event_hdr.c  sirc_event_hdr.h  sirc_parse.c  sirc_parse.h  socket.h
src/sirc_real/: README.rst  io_stream.c  io_stream.h  sirc.c  sirc_cmd.c  sirc_event_hdr.c  sirc_event_hdr.h  sirc_parse.c  sirc_parse.h  sirc_prefs.c  sirc_utils.c  socket.c
src/srn/: meson.build  srn-app.c  srn-app.h  srn-window.c  srn-window.h
src/srv/: command.c  irc_event.c  libircclient_ex.c  srv.c  srv_event.c  srv_hdr.c  srv_session.c  srv_session_cmd.c  srv_test.c  ui_event.c
src/sui-gtk/: nick_menu.c  srain_app.c  srain_app.h  srain_chat.c  srain_chat.h  srain_entry_completion.c  srain_image.c  srain_msg.c  srain_msg.h  srain_stack_sidebar.h  srain_user_list.h  sui.c  (+4 more)
(+377 files in other folders)
